assertion failed: no insertions allowed

XMLWordPrintable

    • b36

        Test: test/hotspot/jtreg/compiler/aot/cli/DisabledAOTWithLibraryTest.java

        # Internal Error (/src/hotspot/share/opto/node.cpp:202), pid=9430, tid=9450
        # assert(cnt == _outcnt) failed: no insertions allowed

        java.lang.RuntimeException: Expected to get exit value of [0]

        at jdk.test.lib.process.OutputAnalyzer.shouldHaveExitValue(OutputAnalyzer.java:380)
        at compiler.aot.AotCompiler.main(AotCompiler.java:79)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:564)
        at com.sun.javatest.regtest.agent.MainActionHelper$SameVMRunnable.run(MainActionHelper.java:230)
        at java.base/java.lang.Thread.run(Thread.java:844)


        V [libjvm.so+0x18266d2] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x162
        V [libjvm.so+0x182749f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
        V [libjvm.so+0xb33e5d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
        V [libjvm.so+0x144af77] DUIterator_Fast::verify(Node const*, bool)+0x57
        V [libjvm.so+0x144b4d6] DUIterator_Last::verify_step(unsigned int)+0x36
        V [libjvm.so+0xa87f83] Compile::gvn_replace_by(Node*, Node*)+0x233
        V [libjvm.so+0xe1e709] GraphKit::replace_call(CallNode*, Node*, bool)+0x149
        V [libjvm.so+0x8b6eba] LateInlineCallGenerator::do_late_inline()+0xaaa
        V [libjvm.so+0xa91812] Compile::inline_incrementally_one(PhaseIterGVN&)+0x3a2
        V [libjvm.so+0xa961ef] Compile::inline_incrementally(PhaseIterGVN&)+0x12f
        V [libjvm.so+0xa99261] Compile::Optimize()+0x301
        V [libjvm.so+0xa9b1ce] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x124e
        V [libjvm.so+0x8b4552] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2e2
        V [libjvm.so+0xaa5d4e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x38e
        V [libjvm.so+0xaa6941] CompileBroker::compiler_thread_loop()+0x241
        V [libjvm.so+0x177e2ba] JavaThread::thread_main_inner()+0x21a
        V [libjvm.so+0x177e4fa] JavaThread::run()+0x17a
        V [libjvm.so+0x14b5eba] thread_native_entry(Thread*)+0xfa
        C [libpthread.so.0+0x7dc5] start_thread+0xc5

              Assignee:
              Roland Westrelin
              Reporter:
              Jesper Wilhelmsson
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: