8191950: assertion failed: no insertions allowed

Check for dead loops before incremental inlining.

Reviewed-by: thartmann